# mp4_to_mp3_app

python/src/auth/: init.sql  server.py
src/auth/: Dockerfile  init.sql  pyproject.toml  server.py
src/manifests/: auth-deploy.yaml  configmap.yaml  secret.yaml  service.yaml
